--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,18 @@ mybatis:
 # ===============引入日志配置文件  log  =============================
 logging:
   config: classpath:log/logback-boot.xml
+
+# =====================   redis  log  =============================
+shiro-redis:
+  enabled: true
+  redis-manager:
+    host: 127.0.0.1:6379
+
+# =====================   redis  log  =============================
+suphowe:
+  jwt:
+    # 加密秘钥
+    secret: f4e2e52034348f86b67cde581c0f9eb5
+    # token有效时长，7天，单位秒
+    expire: 604800
+    header: Authorization
