--- a/pom.xml
+++ b/pom.xml
@@ -89,10 +89,16 @@
             <version>1.7.25</version>
         </dependency>
 
+        <!-- json -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
         </dependency>
 
         <dependency>
