--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
       test-on-return: false
       test-while-idle: true
       max-total: 20
+# =============== server配置========================
+server:
+  port: 8081
 # ===============mybatis配置========================
 ## 该配置节点为独立的节点，有很多同学容易将这个配置放在spring的节点下，导致配置无法被识别
 mybatis:
